package.json recent changes

--- a/index.html
+++ b/index.html
@@ -12,25 +12,29 @@
 </head>
 
 <body>
-    <div class="sidebar">
+    <nav class="navbar">
+        <span class="navbar-toggle" id="js-navbar-toggle">
+            <i class="fas fa-bars"></i>
+        </span>
         <a href="#" class="logo">just do it</a>
-        <ul>
-            <li><a class="active" href="#general">General</a></li>
-            <li><a href="#detalis">Detalis</a></li>
-            <li><a href="#links">Links</a></li>
-            <li><a href="#banners">Banners</a></li>
-            <li><a href="#personal-data">Personal data</a></li>
-            <li><a href="#payout">Payout</a></li>
-            <li><a href="#postback">Postback</a></li>
+        <ul class="main-nav">
+            <li class="nav-links"><a class="active" href="#general">General</a></li>
+            <li class="nav-links"><a href="#detalis">Detalis</a></li>
+            <li class="nav-links"><a href="#links">Links</a></li>
+            <li class="nav-links"><a href="#banners">Banners</a></li>
+            <li class="nav-links"><a href="#personal-data">Personal data</a></li>
+            <li class="nav-links"><a href="#payout">Payout</a></li>
+            <li class="nav-links"><a href="#postback">Postback</a></li>
         </ul>
 
-    </div>
+    </nav>
     <div class="topbar">
 
     </div>
     <div class="general">
 
     </div>
+    <script type="text/javascript" src="js/script.js"></script>
 </body>
 
 </html>
