--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>solo-project</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
-    <link rel="stylesheet" href="images/icons">
     <meta name="author" content="Adrian Ostapkiewicz">
     <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -24,7 +23,7 @@
             </div>
     
             <ul class="main-nav">
-                <li class="nav-links"><i class="ci" href="images/icons/arrow-down-small.svg"></i><a class="active" href="#general">General</a></li>
+                <li class="nav-links"><i class="arrow-down"></i><a class="active" href="#general">General</a></li>
                 <li class="nav-links"><a href="#detalis">Detalis</a></li>
                 <li class="nav-links"><a href="#links">Links</a></li>
                 <li class="nav-links"><a href="#banners">Banners</a></li>
