--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head>
 
-<body>
+<body class ="general-statistic-template">
     <nav class="navbar">
         <div class="logo-box">
             <a href="#" class="logo">Just do it</a>
@@ -32,6 +32,13 @@
             <li class="nav-links"><a href="#postback"><span class="icon icon-postback"></span>Postback</a></li>
         </ul>
         <div class="nav-underLine"></div>
+        <div class="nav-manager">YOUR MANAGER</div>
+        <div class="nav-chat">
+            <div class="chat-avatar">
+                <div class="avatar-dot"></div>
+            </div>
+            <div class="chat-nick">Mikhael E.</div>
+        </div>
     </nav>
     <div class="container">
         <div class="topbar">
@@ -62,9 +69,6 @@
             <div class="diagram"></div>
         </div>
     </div>
-
-
-    <script type="text/javascript" src="js/script.js"></script>
 </body>
 
 </html>
