started to work on top bar

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 
 </head>
 
-<body class ="general-statistic-template">
+<body class="general-statistic-template">
+
+    <!--aside navbar-->
+
     <nav class="navbar">
         <div class="logo-box">
             <a href="#" class="logo">Just do it</a>
@@ -23,14 +26,17 @@
         </div>
 
         <ul class="main-nav">
-            <li class="nav-links"><a class="active" href="#general"><span class="icon icon-general"></span>General</a></li>
+            <li class="nav-links"><a class="active" href="#general"><span class="icon icon-general"></span>General</a>
+            </li>
             <li class="nav-links"><a href="#details"><span class="icon icon-details"></span>Detalis</a></li>
             <li class="nav-links"><a href="#links"><span class="icon icon-links"></span>Links</a></li>
             <li class="nav-links"><a href="#banners"><span class="icon icon-banners"></span>Banners</a></li>
-            <li class="nav-links"><a href="#personal-data"><span class="icon icon-personaldata"></span>Personal data</a></li>
+            <li class="nav-links"><a href="#personal-data"><span class="icon icon-personaldata"></span>Personal data</a>
+            </li>
             <li class="nav-links"><a href="#payout"><span class="icon icon-payout"></span>Payout</a></li>
             <li class="nav-links"><a href="#postback"><span class="icon icon-postback"></span>Postback</a></li>
         </ul>
+
         <div class="nav-underLine"></div>
         <div class="nav-manager">YOUR MANAGER</div>
         <div class="nav-chat">
@@ -39,14 +45,22 @@
             </div>
             <div class="chat-nick">Mikhael E.</div>
         </div>
+
     </nav>
+
+    <!--Container-->
+
     <div class="container">
+
+        <!--TOPBAR-->
+
         <div class="topbar">
-            <div class="topbar-element wallet">$1,500.00</div>
+            <div class="topbar-element wallet"><span class="topbar__icon icon-wallet"</span>$1,500.00</div>
             <div class="topbar-element bell">b</div>
             <div class="topbar-element user">leonardo Diaprio</div>
             <div class="topbar-element exit">q</div>
         </div>
+
         <div class="general">
             <div class="general-text">GENERAL STATISCTIC</div>
             <div class="general-date">
@@ -69,6 +83,8 @@
             <div class="diagram"></div>
         </div>
     </div>
+
+
 </body>
 
 </html>
