finished topbar menu

--- a/index.html
+++ b/index.html
@@ -55,10 +55,15 @@
         <!--TOPBAR-->
 
         <div class="topbar">
-            <div class="topbar-element wallet"><span class="topbar__icon icon-wallet"</span>$1,500.00</div>
-            <div class="topbar-element bell">b</div>
-            <div class="topbar-element user">leonardo Diaprio</div>
-            <div class="topbar-element exit">q</div>
+            <div class="topbar-element">
+                <span class="topbar__icon icon-wallet border--left"></span>
+                <span class="cash">$1,500.00</span>
+                <span class="topbar__icon icon-arrow-down-small border--right"></span>
+                <span class="topbar__icon icon-notification border--right"></span>
+                <span class="topbar__icon icon-profile"></span>
+                <span class="profile__username">Leonardo Dicaprio</span>
+                <span class="topbar__icon icon-quit border--left"></span>
+            </div>
         </div>
 
         <div class="general">
