finished date component

--- a/index.html
+++ b/index.html
@@ -66,27 +66,23 @@
             </div>
         </div>
 
-        <div class="general">
-            <div class="general-text">GENERAL STATISCTIC</div>
-            <div class="general-date">
-                <div class="date-columns">
-                    <input type="date" id="start" name="date-start" value="2019-05-05" min="2018-01-01"
-                        max="2020-01-01">
-                    <span class="date-splitLine"></span>
-                    <input type="date" id="end" name="date-end" value="2019-05-05" min="2018-01-01" max="2020-01-01">
-                </div>
-                <div class="date-button">B</div>
+        <!--GENERAL-->
 
+        <div class="general">
+            <div class="general__text">GENERAL STATISCTIC</div>
+            <div class="general__date">
+                <div class="date__box">
+                    <div class="start__date">16.05.2016</div>
+                    <div class="split__line"></div>
+                    <div class="finish__date">16.05.2016</div>
+                    <span class="icon-calendar"></span>
+                </div>
+                <span class="icon-refresh"></span>
             </div>
-            <div class="stats">
-                <div class="visits"></div>
-                <div class="ftd"></div>
-                <div class="netDeposit"></div>
-                <div class="turnOver"></div>
-            </div>
-            <div class="earning chart"></div>
-            <div class="diagram"></div>
+            <div class="general__stats"></div>
+            <div class="general__chart"></div>   
         </div>
+
     </div>
 
 
