--- a/index.html
+++ b/index.html
@@ -48,28 +48,30 @@
 
     </nav>
 
+    <!--TOP BAR-->
+
+    <div class="topbar">
+        <div class="topbar-element">
+            <span class="topbar__icon icon-wallet border--left"></span>
+            <span class="cash">$1,500.00</span>
+            <span class="topbar__icon icon-arrow-down-small border--right"></span>
+            <span class="topbar__icon icon-notification border--right"></span>
+            <span class="topbar__icon icon-profile"></span>
+            <span class="profile__username">Leonardo Dicaprio</span>
+            <span class="topbar__icon icon-quit border--left"></span>
+        </div>
+    </div>
+
     <!--Container-->
 
     <div class="container">
 
-        <!--TOPBAR-->
-
-        <div class="topbar">
-            <div class="topbar-element">
-                <span class="topbar__icon icon-wallet border--left"></span>
-                <span class="cash">$1,500.00</span>
-                <span class="topbar__icon icon-arrow-down-small border--right"></span>
-                <span class="topbar__icon icon-notification border--right"></span>
-                <span class="topbar__icon icon-profile"></span>
-                <span class="profile__username">Leonardo Dicaprio</span>
-                <span class="topbar__icon icon-quit border--left"></span>
-            </div>
-        </div>
-
         <!--GENERAL-->
 
         <div class="general">
-            <div class="general__text">GENERAL STATISCTIC</div>
+            <div class="general__text">
+                <h3>GENERAL STATISCTIC</h3>
+            </div>
             <div class="general__date">
                 <div class="date__box">
                     <div class="start__date">16.05.2016</div>
@@ -79,8 +81,47 @@
                 </div>
                 <span class="icon-refresh"></span>
             </div>
-            <div class="general__stats"></div>
-            <div class="general__chart"></div>   
+            <div class="general__stats">
+                <div class="stats__row">
+                    <div class="stats__visit stats--wrapper">
+                        <h4 class="stats__info">Visit Singups</h4>
+                        <h4 class="stats__value">124</h4>
+                    </div>
+                    <div class="stats__ftd stats--wrapper">
+                        <h4 class="stats__info">FTD</h4>
+                        <h4 class="stats__value">445</h4>
+                    </div>
+                </div>
+                <div class="stats__row">
+                    <div class="stats__deposit stats--wrapper">
+                        <h4 class="stats__info">Net Deposit</h4>
+                        <h4 class="stats__value">564</h4>
+                    </div>
+                    <div class="stats__turnOver stats--wrapper">
+                        <h4 class="stats__info">Turn over</h4>
+                        <h4 class="stats__value">432</h4>
+                    </div>
+                </div>
+            </div>
+            <div class="general__chart">
+                <h3>Earnigns chart</h3>
+                <div class="chart__box">
+                    <div class="chart chart__singups"><span class="dot blue--dot"></span>
+                        <h3>Signups</h3>
+                    </div>
+                    <div class="chart chart__ftd"><span class="dot orange--dot"></span>
+                        <h3>FTD</h3>
+                    </div>
+                    <div class="chart chart__earned"><span class="dot green--dot"></span>
+                        <h3>Earned</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="general__diagram">
+                <div class="diagram__img">
+                    <img src="/images/diagram.png" width="100%" height="100%">
+                </div>
+            </div>
         </div>
 
     </div>
