--- a/index.html
+++ b/index.html
@@ -17,34 +17,40 @@
 
     <!--aside navbar-->
 
-    <nav class="navbar">
+    <nav class="navbar" id="navbar">
         <div class="logo-box">
             <a href="#" class="logo">Just do it</a>
             <span class="navbar-toggle" id="js-navbar-toggle">
                 <i class="fas fa-bars"></i>
             </span>
         </div>
-
-        <ul class="main-nav">
-            <li class="nav-links"><a class="active" href="#general"><span class="icon icon-general"></span>General</a>
-            </li>
-            <li class="nav-links"><a href="#details"><span class="icon icon-details"></span>Detalis</a></li>
-            <li class="nav-links"><a href="#links"><span class="icon icon-links"></span>Links</a></li>
-            <li class="nav-links"><a href="#banners"><span class="icon icon-banners"></span>Banners</a></li>
-            <li class="nav-links"><a href="#personal-data"><span class="icon icon-personaldata"></span>Personal data</a>
-            </li>
-            <li class="nav-links"><a href="#payout"><span class="icon icon-payout"></span>Payout</a></li>
-            <li class="nav-links"><a href="#postback"><span class="icon icon-postback"></span>Postback</a></li>
-        </ul>
-
-        <div class="nav-underLine"></div>
-        <div class="nav-manager">YOUR MANAGER</div>
-        <div class="nav-chat">
-            <div class="chat-avatar">
-                <div class="avatar-dot"></div>
+        <div class="mySidebar" id="mySidebar">
+            <ul class="main-nav">
+                <li class="nav-links"><a class="active" href="#general"><span
+                            class="icon icon-general"></span>General</a>
+                </li>
+                <li class="nav-links"><a href="#details"><span class="icon icon-details"></span>Detalis</a></li>
+                <li class="nav-links"><a href="#links"><span class="icon icon-links"></span>Links</a></li>
+                <li class="nav-links"><a href="#banners"><span class="icon icon-banners"></span>Banners</a></li>
+                <li class="nav-links"><a href="#personal-data"><span class="icon icon-personaldata"></span>Personal
+                        data</a>
+                </li>
+                <li class="nav-links"><a href="#payout"><span class="icon icon-payout"></span>Payout</a></li>
+                <li class="nav-links"><a href="#postback"><span class="icon icon-postback"></span>Postback</a></li>
+            </ul>
+            <div class="mobile-only">
+                <div class="nav-underLine"></div>
+                <div class="nav-manager">YOUR MANAGER</div>
+                <div class="nav-chat">
+                    <div class="chat-avatar">
+                        <div class="avatar-dot"></div>
+                    </div>
+                    <div class="chat-nick">Mikhael E.</div>
+                </div>
             </div>
-            <div class="chat-nick">Mikhael E.</div>
+
         </div>
+
 
     </nav>
 
@@ -126,7 +132,7 @@
 
     </div>
 
-
+    <script src="js/script.js"></script>
 </body>
 
 </html>
