fisnished RWD for mobiles and small devices

--- a/index.html
+++ b/index.html
@@ -132,6 +132,25 @@
 
     </div>
 
+    <div class="topbar-mobile">
+        <div class="bottom-bar">
+            <div class="topbar-element">
+                <div class="topbar__mobileWrapper mobileWrapper--border">
+                    <span class="topbar__icon icon-wallet border--left"></span>
+                    <span class="cash">$1,500.00</span>
+                    <span class="topbar__icon icon-arrow-down-small border--right"></span>
+                    <span class="topbar__icon icon-notification"></span>
+                </div>
+                <div class="topbar__mobileWrapper">
+                    <span class="topbar__icon icon-profile"></span>
+                    <span class="profile__username">Leonardo Dicaprio</span>
+                    <span class="topbar__icon icon-quit border--left"></span>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
     <script src="js/script.js"></script>
 </body>
 
