--- a/index.html
+++ b/index.html
@@ -18,34 +18,34 @@
     <!--aside navbar-->
 
     <nav class="navbar" id="navbar">
-        <div class="logo-box">
-            <a href="#" class="logo">Just do it</a>
-            <span class="navbar-toggle" id="js-navbar-toggle">
-                <i class="fas fa-bars"></i>
+        <div class="navbar__box">
+            <a href="#" class="box__logo">Just do it</a>
+            <span class="box__burger" id="js-navbar-toggle">
+                <i class="burger__item fas fa-bars"></i>
             </span>
         </div>
-        <div class="mySidebar" id="mySidebar">
-            <ul class="main-nav">
-                <li class="nav-links"><a class="active" href="#general"><span
-                            class="icon icon-general"></span>General</a>
+        <div class="navbar__mySidebar" id="mySidebar">
+            <ul class="mySidebar__list">
+                <li class="list__item"><a class="active" href="#general"><span
+                            class="item__icon icon-general"></span>General</a>
                 </li>
-                <li class="nav-links"><a href="#details"><span class="icon icon-details"></span>Detalis</a></li>
-                <li class="nav-links"><a href="#links"><span class="icon icon-links"></span>Links</a></li>
-                <li class="nav-links"><a href="#banners"><span class="icon icon-banners"></span>Banners</a></li>
-                <li class="nav-links"><a href="#personal-data"><span class="icon icon-personaldata"></span>Personal
+                <li class="list__item"><a href="#details"><span class="item__icon icon-details"></span>Detalis</a></li>
+                <li class="list__item"><a href="#links"><span class="item__icon icon-links"></span>Links</a></li>
+                <li class="list__item"><a href="#banners"><span class="item__icon icon-banners"></span>Banners</a></li>
+                <li class="list__item"><a href="#personal-data"><span class="item__icon icon-personaldata"></span>Personal
                         data</a>
                 </li>
-                <li class="nav-links"><a href="#payout"><span class="icon icon-payout"></span>Payout</a></li>
-                <li class="nav-links"><a href="#postback"><span class="icon icon-postback"></span>Postback</a></li>
+                <li class="list__item"><a href="#payout"><span class="item__icon icon-payout"></span>Payout</a></li>
+                <li class="list__item"><a href="#postback"><span class="item__icon icon-postback"></span>Postback</a></li>
             </ul>
-            <div class="mobile-only">
-                <div class="nav-underLine"></div>
-                <div class="nav-manager">YOUR MANAGER</div>
-                <div class="nav-chat">
-                    <div class="chat-avatar">
-                        <div class="avatar-dot"></div>
+            <div class="mySidebar__mobile">
+                <div class="mobile__underLine"></div>
+                <div class="mobile__manager">YOUR MANAGER</div>
+                <div class="mobile__chat">
+                    <div class="chat__avatar">
+                        <div class="avatar__dot"></div>
                     </div>
-                    <div class="chat-nick">Mikhael E.</div>
+                    <div class="chat__nick">Mikhael E.</div>
                 </div>
             </div>
 
@@ -57,14 +57,14 @@
     <!--TOP BAR-->
 
     <div class="topbar">
-        <div class="topbar-element">
-            <span class="topbar__icon icon-wallet border--left"></span>
-            <span class="cash">$1,500.00</span>
-            <span class="topbar__icon icon-arrow-down-small border--right"></span>
-            <span class="topbar__icon icon-notification border--right"></span>
-            <span class="topbar__icon icon-profile"></span>
-            <span class="profile__username">Leonardo Dicaprio</span>
-            <span class="topbar__icon icon-quit border--left"></span>
+        <div class="topbar__element">
+            <span class="element__icon  element__icon--borderLeft icon-wallet"></span>
+            <span class="element__cash">$1,500.00</span>
+            <span class="element__icon element__icon--borderRight icon-arrow-down-small"></span>
+            <span class="element__icon element__icon--borderRight icon-notification"></span>
+            <span class="element__icon icon-profile"></span>
+            <span class="element__username">Leonardo Dicaprio</span>
+            <span class="element__icon element__icon--borderLeft icon-quit"></span>
         </div>
     </div>
 
@@ -79,46 +79,46 @@
                 <h3>GENERAL STATISCTIC</h3>
             </div>
             <div class="general__date">
-                <div class="date__box">
-                    <div class="start__date">16.05.2016</div>
-                    <div class="split__line"></div>
-                    <div class="finish__date">16.05.2016</div>
-                    <span class="icon-calendar"></span>
+                <div class="date__boxDate">
+                    <div class="boxDate__start">16.05.2016</div>
+                    <div class="boxDate__split"></div>
+                    <div class="boxDate__finish">16.05.2016</div>
+                    <span class="boxDate__icon icon-calendar"></span>
                 </div>
-                <span class="icon-refresh"></span>
+                <span class="date__icon icon-refresh"></span>
             </div>
             <div class="general__stats">
-                <div class="stats__row">
-                    <div class="stats__visit stats--wrapper">
-                        <h4 class="stats__info">Visit Singups</h4>
-                        <h4 class="stats__value">124</h4>
+                <div class="stats__rowStats">
+                    <div class="rowStats__statsBox rowStats__statsBox--wrapper">
+                        <h4 class="statsBox__info">Visit Singups</h4>
+                        <h4 class="statsBox__value">124</h4>
                     </div>
-                    <div class="stats__ftd stats--wrapper">
-                        <h4 class="stats__info">FTD</h4>
-                        <h4 class="stats__value">445</h4>
+                    <div class="rowStats__statsBox rowStats__statsBox--wrapper">
+                        <h4 class="statsBox__info">FTD</h4>
+                        <h4 class="statsBox__value">445</h4>
                     </div>
                 </div>
-                <div class="stats__row">
-                    <div class="stats__deposit stats--wrapper">
-                        <h4 class="stats__info">Net Deposit</h4>
-                        <h4 class="stats__value">564</h4>
+                <div class="stats__rowStats">
+                    <div class="rowStats__statsBox rowStats__statsBox--wrapper">
+                        <h4 class="statsBox__info">Net Deposit</h4>
+                        <h4 class="statsBox__value">564</h4>
                     </div>
-                    <div class="stats__turnOver stats--wrapper">
-                        <h4 class="stats__info">Turn over</h4>
-                        <h4 class="stats__value">432</h4>
+                    <div class="rowStats__statsBox rowStats__statsBox--wrapper">
+                        <h4 class="statsBox__info">Turn over</h4>
+                        <h4 class="statsBox__value">432</h4>
                     </div>
                 </div>
             </div>
             <div class="general__chart">
                 <h3>Earnigns chart</h3>
-                <div class="chart__box">
-                    <div class="chart chart__singups"><span class="dot blue--dot"></span>
+                <div class="chart__boxChart">
+                    <div class="boxChart__btn"><span class="boxChart__dot"></span>
                         <h3>Signups</h3>
                     </div>
-                    <div class="chart chart__ftd"><span class="dot orange--dot"></span>
+                    <div class="boxChart__btn"><span class="boxChart__dot boxChart__dot--orange"></span>
                         <h3>FTD</h3>
                     </div>
-                    <div class="chart chart__earned"><span class="dot green--dot"></span>
+                    <div class="boxChart__btn boxChart__btn--earned"><span class="boxChart__dot boxChart__dot--green"></span>
                         <h3>Earned</h3>
                     </div>
                 </div>
@@ -132,19 +132,19 @@
 
     </div>
 
-    <div class="topbar-mobile">
-        <div class="bottom-bar">
-            <div class="topbar-element">
-                <div class="topbar__mobileWrapper mobileWrapper--border">
-                    <span class="topbar__icon icon-wallet border--left"></span>
-                    <span class="cash">$1,500.00</span>
-                    <span class="topbar__icon icon-arrow-down-small border--right"></span>
-                    <span class="topbar__icon icon-notification"></span>
+    <div class="topbarMobile">
+        <div class="topbarMobile__bottomBar">
+            <div class="bottomBar__caddy">
+                <div class="caddy__element caddy__element--borderBottom">
+                    <span class="element__icon icon-wallet"></span>
+                    <span class="element__cash">$1,500.00</span>
+                    <span class="element__icon element__icon--borderRight icon-arrow-down-small"></span>
+                    <span class="element__icon icon-notification"></span>
                 </div>
-                <div class="topbar__mobileWrapper">
-                    <span class="topbar__icon icon-profile"></span>
-                    <span class="profile__username">Leonardo Dicaprio</span>
-                    <span class="topbar__icon icon-quit border--left"></span>
+                <div class="caddy__element">
+                    <span class="element__icon icon-profile"></span>
+                    <span class="element__username">Leonardo Dicaprio</span>
+                    <span class="element__icon element__icon--borderLeft icon-quit"></span>
                 </div>
 
             </div>
