again formated html and scss to BEM method

--- a/index.html
+++ b/index.html
@@ -18,31 +18,31 @@
     <!--aside navbar-->
 
     <nav class="navbar" id="navbar">
-        <div class="navbar__box">
+        <div class="box">
             <a href="#" class="box__logo">Just do it</a>
-            <span class="box__burger" id="js-navbar-toggle">
+            <span class="burger" id="js-navbar-toggle">
                 <i class="burger__item fas fa-bars"></i>
             </span>
         </div>
-        <div class="navbar__mySidebar" id="mySidebar">
-            <ul class="mySidebar__list">
-                <li class="list__item"><a class="active" href="#general"><span
+        <div class="mySidebar" id="mySidebar">
+            <ul class="list">
+                <li class="item"><a class="active" href="#general"><span
                             class="item__icon icon-general"></span>General</a>
                 </li>
-                <li class="list__item"><a href="#details"><span class="item__icon icon-details"></span>Detalis</a></li>
-                <li class="list__item"><a href="#links"><span class="item__icon icon-links"></span>Links</a></li>
-                <li class="list__item"><a href="#banners"><span class="item__icon icon-banners"></span>Banners</a></li>
-                <li class="list__item"><a href="#personal-data"><span class="item__icon icon-personaldata"></span>Personal
+                <li class="item"><a href="#details"><span class="item__icon icon-details"></span>Detalis</a></li>
+                <li class="item"><a href="#links"><span class="item__icon icon-links"></span>Links</a></li>
+                <li class="item"><a href="#banners"><span class="item__icon icon-banners"></span>Banners</a></li>
+                <li class="item"><a href="#personal-data"><span class="item__icon icon-personaldata"></span>Personal
                         data</a>
                 </li>
-                <li class="list__item"><a href="#payout"><span class="item__icon icon-payout"></span>Payout</a></li>
-                <li class="list__item"><a href="#postback"><span class="item__icon icon-postback"></span>Postback</a></li>
+                <li class="item"><a href="#payout"><span class="item__icon icon-payout"></span>Payout</a></li>
+                <li class="item"><a href="#postback"><span class="item__icon icon-postback"></span>Postback</a></li>
             </ul>
-            <div class="mySidebar__mobile">
+            <div class="mobile">
                 <div class="mobile__underLine"></div>
                 <div class="mobile__manager">YOUR MANAGER</div>
-                <div class="mobile__chat">
-                    <div class="chat__avatar">
+                <div class="chat">
+                    <div class="avatar">
                         <div class="avatar__dot"></div>
                     </div>
                     <div class="chat__nick">Mikhael E.</div>
@@ -57,14 +57,14 @@
     <!--TOP BAR-->
 
     <div class="topbar">
-        <div class="topbar__element">
-            <span class="element__icon  element__icon--borderLeft icon-wallet"></span>
+        <div class="element">
+            <span class="element__icon  icon--borderLeft icon-wallet"></span>
             <span class="element__cash">$1,500.00</span>
-            <span class="element__icon element__icon--borderRight icon-arrow-down-small"></span>
-            <span class="element__icon element__icon--borderRight icon-notification"></span>
+            <span class="element__icon icon--borderRight icon-arrow-down-small"></span>
+            <span class="element__icon icon--borderRight icon-notification"></span>
             <span class="element__icon icon-profile"></span>
             <span class="element__username">Leonardo Dicaprio</span>
-            <span class="element__icon element__icon--borderLeft icon-quit"></span>
+            <span class="element__icon icon--borderLeft icon-quit"></span>
         </div>
     </div>
 
@@ -75,11 +75,11 @@
         <!--GENERAL-->
 
         <div class="general">
-            <div class="general__text">
+            <div class="text">
                 <h3>GENERAL STATISCTIC</h3>
             </div>
-            <div class="general__date">
-                <div class="date__boxDate">
+            <div class="date">
+                <div class="boxDate">
                     <div class="boxDate__start">16.05.2016</div>
                     <div class="boxDate__split"></div>
                     <div class="boxDate__finish">16.05.2016</div>
@@ -87,43 +87,46 @@
                 </div>
                 <span class="date__icon icon-refresh"></span>
             </div>
-            <div class="general__stats">
-                <div class="stats__rowStats">
-                    <div class="rowStats__statsBox rowStats__statsBox--wrapper">
+            <div class="stats">
+                <div class="rowStats">
+                    <div class="statsBox statsBox--wrapper">
                         <h4 class="statsBox__info">Visit Singups</h4>
                         <h4 class="statsBox__value">124</h4>
                     </div>
-                    <div class="rowStats__statsBox rowStats__statsBox--wrapper">
+                    <div class="statsBox statsBox--wrapper">
                         <h4 class="statsBox__info">FTD</h4>
                         <h4 class="statsBox__value">445</h4>
                     </div>
                 </div>
-                <div class="stats__rowStats">
-                    <div class="rowStats__statsBox rowStats__statsBox--wrapper">
+                <div class="rowStats">
+                    <div class="statsBox statsBox--wrapper">
                         <h4 class="statsBox__info">Net Deposit</h4>
                         <h4 class="statsBox__value">564</h4>
                     </div>
-                    <div class="rowStats__statsBox rowStats__statsBox--wrapper">
+                    <div class="statsBox statsBox--wrapper">
                         <h4 class="statsBox__info">Turn over</h4>
                         <h4 class="statsBox__value">432</h4>
                     </div>
                 </div>
             </div>
-            <div class="general__chart">
+            <div class="chart">
                 <h3>Earnigns chart</h3>
-                <div class="chart__boxChart">
-                    <div class="boxChart__btn"><span class="boxChart__dot"></span>
+                <div class="boxChart">
+                    <div class="btn">
+                        <span class="btn__dot"></span>
                         <h3>Signups</h3>
                     </div>
-                    <div class="boxChart__btn"><span class="boxChart__dot boxChart__dot--orange"></span>
+                    <div class="btn">
+                        <span class="btn__dot dot--orange"></span>
                         <h3>FTD</h3>
                     </div>
-                    <div class="boxChart__btn boxChart__btn--earned"><span class="boxChart__dot boxChart__dot--green"></span>
+                    <div class="btn btn--earned">
+                        <span class="btn__dot dot--green"></span>
                         <h3>Earned</h3>
                     </div>
                 </div>
             </div>
-            <div class="general__diagram">
+            <div class="diagram">
                 <div class="diagram__img">
                     <img src="/images/diagram.png" width="100%" height="100%">
                 </div>
@@ -133,18 +136,18 @@
     </div>
 
     <div class="topbarMobile">
-        <div class="topbarMobile__bottomBar">
-            <div class="bottomBar__caddy">
-                <div class="caddy__element caddy__element--borderBottom">
+        <div class="bottomBar">
+            <div class="caddy">
+                <div class="caddy-element element--borderBottom">
                     <span class="element__icon icon-wallet"></span>
                     <span class="element__cash">$1,500.00</span>
-                    <span class="element__icon element__icon--borderRight icon-arrow-down-small"></span>
+                    <span class="element__icon icon--borderRight icon-arrow-down-small"></span>
                     <span class="element__icon icon-notification"></span>
                 </div>
-                <div class="caddy__element">
+                <div class="caddy-element">
                     <span class="element__icon icon-profile"></span>
                     <span class="element__username">Leonardo Dicaprio</span>
-                    <span class="element__icon element__icon--borderLeft icon-quit"></span>
+                    <span class="element__icon icon--borderLeft icon-quit"></span>
                 </div>
 
             </div>
