banners section fisnished

--- a/index.html
+++ b/index.html
@@ -133,7 +133,61 @@
             </div>
         </div>
 
+        <!-- BANNERS -->
+        <div class="general">
+            <div class="text">
+                <h3>Banners</h3>
+            </div>
+            <div class="center">
+                <div class="btn btn--primary btn--position"> + add new</div>
+            </div>
+            <div class="table">
+                <table class="myTable">
+                    <tr class="table-row">
+                        <td class="table-text">Banner main</td>
+                        <td><a class="link--style" href="#">http://www.website.com/bannermain.gif</a></td>
+                        <td><span class="icon-links"></span></td>
+                        <td><span class="icon-trash"></span></td>
+                    </tr>
+                    <tr class="table-row">
+                        <td class="table-text">Sign up banner</td>
+                        <td><a class="link--style" href="#">http://www.website.com/singup.gif</a></td>
+                        <td><span class="icon-links"></span></td>
+                        <td><span class="icon-trash"></span></td>
+                    </tr>
+                    <tr class="table-row">
+                        <td class="table-text">Banner left side</td>
+                        <td><a class="link--style" href="#">http://www.website.com/leftside.gif</a></td>
+                        <td><span class="icon-links"></span></td>
+                        <td><span class="icon-trash"></span></td>
+                    </tr>
+                    <tr class="table-row">
+                        <td class="table-text">Vertical banner</td>
+                        <td><a class="link--style" href="#">http://www.website.com/vert.gif</a></td>
+                        <td><span class="icon-links"></span></td>
+                        <td><span class="icon-trash"></span></td>
+                    </tr>
+                    <tr class="table-row">
+                        <td class="table-text">Front banner</td>
+                        <td><a class="link--style" href="#">http://www.website.com/front.gif</a></td>
+                        <td><span class="icon-links"></span></td>
+                        <td><span class="icon-trash"></span></td>
+                    </tr>
+                    <tr class="table-row">
+                        <td class="table-text">Horizontal banner</td>
+                        <td><a class="link--style" href="#">http://www.website.com/horizontal.gif</a></td>
+                        <td><span class="icon-links"></span></td>
+                        <td><span class="icon-trash"></span></td>
+                    </tr>
+                </table>
+            </div>
+            <div class="center">
+                <div class="btn btn--primary btn--position"> + add new</div>
+            </div>
+
+        </div>
     </div>
+
 
     <div class="topbarMobile">
         <div class="bottomBar">
