--- a/styleguide.html
+++ b/styleguide.html
@@ -80,5 +80,49 @@
                     <h3>Signups</h3>
                 </div>
 
+                <!--- PAGE HEADER -->
+                <div class="text">
+                    <h3>GENERAL STATISCTIC</h3>
+                </div>
 
+              <!-- LINKS TABLE-->
+
+              <table class="myTable">
+                <tr class="table-row">
+                    <td>Banner main</td>
+                    <td><a href="#">http://www.website.com/bannermain.gif</a></td>
+                    <td><span class="icon-links"></span></td>
+                    <td><span class="icon-trash"></span></td>
+                </tr>
+                <tr class="table-row">
+                    <td>Sign up banner</td>
+                    <td><a href="#">http://www.website.com/singup.gif</a></td>
+                    <td><span class="icon-links"></span></td>
+                    <td><span class="icon-trash"></span></td>
+                </tr>
+                <tr class="table-row">
+                    <td>Banner left side</td>
+                    <td><a href="#">http://www.website.com/leftside.gif</a></td>
+                    <td><span class="icon-links"></span></td>
+                    <td><span class="icon-trash"></span></td>
+                </tr>
+                <tr class="table-row">
+                    <td>Vertical banner</td>
+                    <td><a href="#">http://www.website.com/vert.gif</a></td>
+                    <td><span class="icon-links"></span></td>
+                    <td><span class="icon-trash"></span></td>
+                </tr>
+                <tr class="table-row">
+                    <td>Front banner</td>
+                    <td><a href="#">http://www.website.com/front.gif</a></td>
+                    <td><span class="icon-links"></span></td>
+                    <td><span class="icon-trash"></span></td>
+                </tr>
+                <tr class="table-row">
+                    <td>Horizontal banner</td>
+                    <td><a href="#">http://www.website.com/horizontal.gif</a></td>
+                    <td><span class="icon-links"></span></td>
+                    <td><span class="icon-trash"></span></td>
+                </tr>
+            </table>
 </body>
