done some work on Personal data section

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <!-- BANNERS -->
         <div class="general">
             <div class="text">
-                <h3>Banners</h3>
+                <h3>BANNERS</h3>
             </div>
             <div class="center">
                 <div class="btn btn--primary btn--position"> + add new</div>
@@ -186,6 +186,74 @@
             </div>
 
         </div>
+
+        <!-- PERSONAL DATA-->
+        <div class="general">
+            <div class="text">
+                <h3>PERSONAL DATA</h3>
+            </div>
+            <div class="center border--bottom">
+                <form id="myform" action="#">
+                    <div class="form-box">
+                        <h4>Name</h4>
+                        <input type="text" name="firstname" value="Leonardo">
+                    </div>
+                    <div class="form-box">
+                        <h4>Surname</h4>
+                        <input type="text" name="surname" value="Dicaprio">
+                    </div>
+                    <div class="form-box">
+                        <h4>E-mail</h4>
+                        <input type="text" name="email" value="leo@gmail.com">
+                    </div>
+                    <div class="form-box">
+                        <h4>Phone number</h4>
+                        <input type="number" name="phoneNumber" value="+ 1 432 555 00 44">
+                    </div>
+                </form>
+            </div>
+            <div class="center border--bottom">
+                <form id="myform" action="#">
+                    <div class="form-box">
+                        <h4>Skype</h4>
+                        <input type="text" name="skype" value="Leonardo.D">
+                    </div>
+                    <div class="form-box">
+                        <h4>ICQ</h4>
+                        <input type="text" name="icq" value="">
+                    </div>
+                    <div class="form-box">
+                        <h4>Msn</h4>
+                        <input type="text" name="msn" value="">
+                    </div>
+                </form>
+            </div>
+            <div class="center border--bottom">
+                <form id="myform" action="#">
+                    <div class="form-box">
+                        <h4>Wallet</h4>
+                        <input type="text" name="wallet" value="">
+                    </div>
+                </form>
+            </div>
+            <div class="center border--bottom">
+                <form id="myform" action="#">
+                    <div class="form-box">
+                        <h4>Password</h4>
+                        <input type="password" name="password" value="*******">
+                    </div>
+                    <div class="form-box">
+                        <h4>Repeat</h4>
+                        <input type="password" name="repeat" value="*******">
+                    </div>
+                </form>
+            </div>
+            <div class="center">
+                <input class="btn btn--primary btn--position" type="submit" form="myform" value="Save" />
+            </div>
+
+        </div>
+
     </div>
 
 
