--- a/styleguide.html
+++ b/styleguide.html
@@ -125,4 +125,27 @@
                     <td><span class="icon-trash"></span></td>
                 </tr>
             </table>
+
+
+            <!--- FORM  -->
+            <div class="center">
+                    <form action="/action_page.php">
+                        <div class="form-box">
+                            <h4>Name</h4>
+                            <input type="text" name="firstname" value="Leonardo">
+                        </div>
+                        <div class="form-box">
+                                <h4>Surname</h4>
+                                <input type="text" name="surname" value="Dicaprio">
+                        </div>
+                        <div class="form-box">
+                            <h4>E-mail</h4>
+                            <input type="text" name="email" value="leo@gmail.com">
+                        </div>
+                        <div class="form-box">
+                                <h4>Phone number</h4>
+                                <input type="number" name="phoneNumber" value="+ 1 432 555 00 44">
+                        </div>
+                    </form>
+                </div>
 </body>
