added nu-html checker to task runner, updated form in personal data

--- a/index.html
+++ b/index.html
@@ -192,66 +192,87 @@
             <div class="text">
                 <h3>PERSONAL DATA</h3>
             </div>
-            <div class="center border--bottom">
-                <form id="myform" action="#">
+            <form id="myform" action="#">
+                <div class="center column border--bottom">
+
                     <div class="form-box">
-                        <h4>Name</h4>
+                        <i>
+                            <h4>Name</h4>
+                        </i>
                         <input type="text" name="firstname" value="Leonardo">
                     </div>
                     <div class="form-box">
-                        <h4>Surname</h4>
+                        <i>
+                            <h4>Surname</h4>
+                        </i>
                         <input type="text" name="surname" value="Dicaprio">
                     </div>
                     <div class="form-box">
-                        <h4>E-mail</h4>
+                        <i>
+                            <h4>E-mail</h4>
+                        </i>
                         <input type="text" name="email" value="leo@gmail.com">
                     </div>
                     <div class="form-box">
-                        <h4>Phone number</h4>
+                        <i>
+                            <h4>Phone number</h4>
+                        </i>
                         <input type="number" name="phoneNumber" value="+ 1 432 555 00 44">
                     </div>
-                </form>
-            </div>
-            <div class="center border--bottom">
-                <form id="myform" action="#">
+
+                </div>
+                <div class="center column border--bottom">
+
                     <div class="form-box">
-                        <h4>Skype</h4>
+                        <i>
+                            <h4>Skype</h4>
+                        </i>
                         <input type="text" name="skype" value="Leonardo.D">
                     </div>
                     <div class="form-box">
-                        <h4>ICQ</h4>
-                        <input type="text" name="icq" value="">
+                        <i>
+                            <h4>ICQ</h4>
+                        </i>
+                        <input type="text" name="icq">
                     </div>
                     <div class="form-box">
-                        <h4>Msn</h4>
-                        <input type="text" name="msn" value="">
+                        <i>
+                            <h4>Msn</h4>
+                        </i>
+                        <input type="text" name="msn">
                     </div>
-                </form>
-            </div>
-            <div class="center border--bottom">
-                <form id="myform" action="#">
-                    <div class="form-box">
-                        <h4>Wallet</h4>
-                        <input type="text" name="wallet" value="">
-                    </div>
-                </form>
-            </div>
-            <div class="center border--bottom">
-                <form id="myform" action="#">
-                    <div class="form-box">
-                        <h4>Password</h4>
-                        <input type="password" name="password" value="*******">
-                    </div>
-                    <div class="form-box">
-                        <h4>Repeat</h4>
-                        <input type="password" name="repeat" value="*******">
-                    </div>
-                </form>
-            </div>
-            <div class="center">
-                <input class="btn btn--primary btn--position" type="submit" form="myform" value="Save" />
-            </div>
 
+                </div>
+                <div class="center column border--bottom">
+
+                    <div class="form-box">
+                        <i>
+                            <h4>Wallet</h4>
+                        </i>
+                        <input type="text" name="wallet">
+                    </div>
+
+                </div>
+                <div class="center column border--bottom">
+
+                    <div class="form-box">
+                        <i>
+                            <h4>Password</h4>
+                        </i>
+                        <input type="password" name="password">
+                    </div>
+                    <div class="form-box">
+                        <i>
+                            <h4>Repeat</h4>
+                        </i>
+                        <input type="password" name="repeat">
+                    </div>
+
+                </div>
+                <div class="center">
+                    <input class="btn btn--primary btn--position" type="submit" form="myform" value="Save" />
+                </div>
+            </form>
         </div>
 
     </div>
